2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: New clean-stamps target, more deps fine tunning.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add test for the lfanew field.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add support for absolute uint patching.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Fix generate-stamp deps.
	
2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Add run-test target and fix the generation deps.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Add check_with_peverify target to make it easier to
	check against MS peverify.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: gen-md-tests now require glib. Fix the build.

2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* Initial commit of the metadata verifier test suite.