@@ -1,5 +1,13 @@
 2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* gen-md-tests.c: Extended grammar for expressions for
+	selectors and effects.
+	Added subtraction and file-size expressions.
+	Added truncate effect.
+	Fixed all warnings under -Wall.
+
+2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* Makefile: New clean-stamps target, more deps fine tunning.
 
 2009-01-09 Rodrigo Kumpera  <rkumpera@novell.com>
